register, login authentication work is down

--- a/mytodo/templates/todo/index.html
+++ b/mytodo/templates/todo/index.html
@@ -60,7 +60,7 @@
                     <td class="px-6 py-4 text-lg">
                         {{test.title}}
                     </td>
-                    <td class="px-6 py-4 text-lg">
+                    <td class="px-6 py-4 text-lg break-words max-w-xs">
                         {{test.description}}
                     </td>
                     <td class="px-6 py-4 text-right gap-3 flex flex-1 items-center justify-center text-center">
